add seperate unit file to create config

--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -39,3 +39,9 @@
           - "distribution version : {{ ansible_distribution_major_version }}"
           - "ansible version      : {{ ansible_version.full }}"
           - "python version       : {{ ansible_python.version.major }}.{{ ansible_python.version.minor }}"
+
+- name: prepare container
+  hosts: instance
+
+  roles:
+    - role: bodsch.docker.docker
