update README and collections.yml

--- a/collections.yml
+++ b/collections.yml
@@ -3,5 +3,6 @@
 collections:
   - name: bodsch.core
   - name: bodsch.docker
+    version: ">=1.2.0"
   - name: community.general
   - name: ansible.posix
