--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -134,6 +134,16 @@
 
     - name: create systemd service unit
       ansible.builtin.template:
+        src: "init/systemd/paperless-pull.service.j2"
+        dest: "{{ systemd_lib_directory }}/paperless-pull.service"
+        owner: root
+        group: root
+        mode: "0644"
+      notify:
+        - daemon-reload
+
+    - name: create systemd service unit
+      ansible.builtin.template:
         src: "init/systemd/paperless.service.j2"
         dest: "{{ systemd_lib_directory }}/paperless.service"
         owner: root
