update build system

--- a/tox.ini
+++ b/tox.ini
@@ -17,14 +17,13 @@ passenv = *
 
 deps =
     -r test-requirements.txt
-    ansible_8.0: ansible>=8.0,<8.1
     ansible_8.5: ansible>=8.5,<8.6
     ansible_9.0: ansible>=9.0,<9.1
     ansible_9.5: ansible>=9.5,<9.6
     ansible_10.0: ansible>=10.0,<10.1
     ansible_10.7: ansible>=10.7,<10.8
     ansible_11.0: ansible>=11.0,<11.1
-    ansible_11.2: ansible>=11.2,<11.3
+    ansible_11.7: ansible>=11.8,<11.8
 
 #commands_pre =
 #    /usr/bin/find {toxinidir} -type f -not -path '{toxworkdir}/*' -path '*/__pycache__/*' -name '*.py[c|o]' -delete
@@ -32,3 +31,7 @@ deps =
 
 commands =
     {posargs:molecule test --all --destroy always}
+
+allowlist_externals =
+    molecule
+    make
