--- a/.github/workflows/configured.yml
+++ b/.github/workflows/configured.yml
@@ -125,7 +125,7 @@ jobs:
           - '8.5'
         scenario:
           - configured
-          - sqlite-with-tika
+          # - sqlite-with-tika
     steps:
       - name: check out the codebase.
         uses: actions/checkout@v4
